test/functions/varargs/typeToVarArgs.good
typeToVarArgs.chpl:3: error: unresolved call 'writeln("x's type is: ", type int(64))'
$CHPL_HOME/modules/standard/ChapelIO.chpl:nnnn: note: this candidate did not match: writeln(const args ...?n, sep: string = "")
typeToVarArgs.chpl:3: note: because actual argument #2 is a type
$CHPL_HOME/modules/standard/ChapelIO.chpl:nnnn: note: but is passed to non-type formal 'sep: string'
typeToVarArgs.chpl:3: note: other candidates are:
$CHPL_HOME/modules/standard/ChapelIO.chpl:nnnn: note:   writeln(const args ...?n)
$CHPL_HOME/modules/standard/ChapelIO.chpl:nnnn: note:   writeln()
