test/functions/varargs/typeToVarArgs.chpl
var x: int;

writeln("x's type is: ", x.type);

